homepage background bug fixed - not working on safari

--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ nav .profile-link a {
 
 .home-main {
   height: 100%;
-  background-image: url(../assets/img/logo.png);
+  background-image: url(../assets/img/steve-johnson-Xx_d26R37E4-unsplash.jpg);
   background-size: cover;
   background-position: center;
   display: grid;
